test/compilable/imports/imp2b.d
module imports.imp2b;

void bar() {}
