test/fail_compilation/fail306.d
void bar(){
  void [] x;
  x[] = -x[];
}

